--- a/source/css/block/_var.scss
+++ b/source/css/block/_var.scss
@@ -1,7 +1,9 @@
 :root {
     --color_black: 0, 0, 0;
-    --color_dark: 38, 38, 38;
-    --color_gray: 102, 102, 102;
-    --color_light: 204, 204, 204;
-    --color_white: 255, 255, 255;
+    --color_dark: 33, 34, 44;
+    --color_purple: 40, 42, 54;
+    --color_violet: 189, 147, 249;
+    --color_pink: 225, 109, 177;
+    --color_cyan: 0, 255, 255;
+    --color_white: 188, 255, 255;
 }
