--- a/assets/scss/block/base.scss
+++ b/assets/scss/block/base.scss
@@ -6,7 +6,7 @@
 }
 
 ::-webkit-resizer {
-  background-color: rgb(var(--color_white));
+  background-color: rgb(var(--color_dark));
   opacity: 0.2;
 }
 
@@ -16,12 +16,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(var(--color_gray));
+  background-color: rgba(var(--color_white), 0.2);
   opacity: 0.6;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(var(--color_gray));
+  background-color: rgba(var(--color_white), 0.6);
   opacity: 0.8;
 }
 
@@ -31,8 +31,16 @@
 }
 
 html {
-  background-color: rgb(var(--color_dark));
+  background-color: rgb(var(--color_black));
   color: rgb(var(--color_white));
+  min-height: 100vh;
+}
+
+body {
+  min-height: 100vh;
+  background-image: url('/img/style/textured.png');
+  background-repeat: repeat;
+  background-position: left top;
 }
 
 h1 {
